Edited CSS project

--- a/W5D1/css_box_model_exercise/index.html
+++ b/W5D1/css_box_model_exercise/index.html
@@ -10,7 +10,11 @@
 
     <div id="second-div"></div>
 
-    <p></p>
+    <div class="third-div">
+      <p>XYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZXYZ</p>
+    </div>
+
+    <p>hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello</p>
   </body>
 </html>
 
